<resources>
    <string name="app_name" >Merchant App</string>
    <string name="start_scan" >Start scan</string>
    <string name="generate_new_qr_code" >Generate New QR code</string>


    <string name="com_auth0_client_id" >YOUR_CLIENT_ID</string>
    <string name="com_auth0_domain" >YOUR_DOMAIN</string>
    <string name="enter_coupon_code" >Enter Coupon code here</string>
    <string name="looks_like_you_ve_scanned_a_wrong_qr_code_please_scan_a_valid_qr_code_and_try_again" >Looks like you\'ve scanned a wrong QR code.\nPlease scan a valid QR code and try again</string>
    <string name="scan_again" >SCAN AGAIN</string>


    <string name="email" >User Name</string>
    <string name="passowrd" >Password</string>
    <string name="login" >LOGIN</string>

    <string name="show_pwd" >Show Password</string>
    <string name="hide_pwd" >Hide Password</string>
    <string name="forgot" >Forgot password?</string>
    <string name="newUser" >Not a Member yet? Sign Up here.</string>
    <string name="paid_successfully" >REDEEMED SUCCESSFULLY</string>
    <string name="paid_Failed" >COUPON ALREADY REDEEMED</string>
    <string name="amount" > ₹ </string>
    <string name="city_rewards" >City Rewards\nMerchants</string>
    <string name="redeem" >Redeem</string>
    <string name="close" >Close</string>


    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>
    <string name="title_activity_merchant_main" >MerchantMainActivity</string>
    <string name="title_home" >Home</string>
    <string name="title_dashboard" >Dashboard</string>
    <string name="title_notifications" >SCAN</string>
    <string name="title_qr" >QR</string>
    <string name="title_support" >SUPPORT</string>
    <string name="title_scan" >SCAN</string>
    <string name="title_history" >HISTORY</string>
    <string name="invalid_qr_code_try_again" >Invalid QR Code. Try again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" >Hello blank fragment</string>
    <string name="transaction_history" >Transaction History</string>
    <string name="generate_qr_code" >Generate QR Code</string>
    <string name="enter_amount" >Enter Amount</string>
    <string name="unit" >Unit</string>
    <string name="no_transactions" >No Transactions.</string>
    <string name="sign_in" >SIGN IN</string>
    <string name="employee_id" >Employee ID</string>
    <string name="password" >Password</string>
    <string name="forgot_password" >Forgot Password?</string>
    <string name="don_t_have_an_account" >Don\'t have an account?</string>
    <string name="scan_coupon" >Scan Coupon</string>


    <string name="login_error" >Invalid credentials</string>
    <string name="scan_pay"><![CDATA[SCAN & PAY]]></string>
    <string name="cancel">CANCEL</string>
    <string name="customer_id">Customer ID</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="generated_by">Generated by</string>
    <string name="payment_approve">PAYMENT APPROVE</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="reward_points">Reward Points</string>
    <string name="by_cash">By Cash</string>
    <string name="credit_debit_card">Credit / Debit Card</string>
    <string name="total_amount_received">Total Amount received</string>
    <string name="change_number">Change Number</string>
    <string name="change_password">Change password</string>
    <string name="change_language">Change Language</string>
    <string name="text_size">Text Size</string>
    <string name="english">English</string>
    <string name="medium">Medium</string>
    <string name="approve">APPROVE</string>
    <string name="enter_transaction_id">Enter Transaction ID</string>
    <string name="enter_bill_amount">Enter Bill Amount</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="update_language">UPDATE LANGUAGE</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birthday">Date of Birthday</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="_10_53_am_on_06_sep_2019">10:53 AM on 06 Sep 2019</string>
    <string name="add_number">Add Number</string>
    <string name="connect_your_facebook">Connect your Facebook</string>
    <string name="customer_service">Customer Service</string>
    <string name="chat">Chat</string>
    <string name="primary_number">Primary Number</string>
    <string name="language">Language</string>
    <string name="_1_pt_1_mmk">(1 Pt = </string>
    <string name="_1_pt_1_mmk2"> MMK)</string>
    <string name="received_from">Received from</string>
    <string name="paid_to">Paid to</string>



    <string name="price_format" translatable="false">%+.2f $</string>
    <string name="generic_name">Hello %s</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="update_password">UPDATE PASSWORD</string>
    <string name="invalid_credentials">Invalid credentials</string>

</resources>
