<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="loginviewmodel"
            type="com.hashedin.marchantapp.viewmodel.LoginViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".viewactivity.MainActivity"
        android:background="@color/white_greyish"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:shadowColor="#b3b3b3"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/city_rewards"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"/>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="5dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/signintext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_dark"
                        android:text="@string/sign_in"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/username_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/signintext">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/employee_id"
                            android:textColor="@color/text_color"
                            android:text="@={loginviewmodel.userName}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/username_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textColor="@color/text_color"
                            android:text="@={loginviewmodel.userPassword}"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/show_hide_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/password_layout"
                         android:text="@string/show_pwd"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentBottom="true">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:layout_height="wrap_content"/>

                        <Button
                            android:id="@+id/redeembtn"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/button"                                    android:elevation="2dp"
                            android:shadowColor="#b3b3b3"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:text="@string/sign_in"
                            android:textColor="@color/QRCodeWhiteColor"
                            android:textStyle="bold"

                            />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/forgottext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_password"
                            android:textColor="@color/text_color"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_below="@+id/forgottext"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">

                            <TextView
                                android:id="@+id/newusertext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text_color"
                                android:text="@string/don_t_have_an_account"/>
                            <TextView
                                android:paddingLeft="5dp"
                                android:id="@+id/contactadmintext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/holo_red_dark"
                                android:text="@string/don_t_have_an_account"/>

                        </LinearLayout>




                    </RelativeLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"/>


            </LinearLayout>

        </LinearLayout>





    </LinearLayout>

</layout>