<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pattern"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.hashedin.marchantapp.viewactivity.MerchantMainActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:background="@drawable/gradient_color_layout"
            android:gravity="center_vertical"
            android:padding="5dp">


            <ImageView
                android:id="@+id/backimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_back_action" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/backimage"
                android:layout_alignBottom="@+id/backimage"
                android:gravity="center"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/payment_approve"
                android:textColor="#ffd33b"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:cardPreventCornerOverlap="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.8"
                            android:orientation="vertical"
                            android:padding="10dp">


                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/qr_scan_pay_imageview"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                app:srcCompat="@drawable/ic_scan_black" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:background="@drawable/horizontal_dash_line" />


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="@string/payment_details"
                                android:textColor="#e56075"
                                android:textStyle="bold" />

                            <ScrollView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">


                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center|top"
                                        android:orientation="horizontal"
                                        android:padding="5dp">

                                        <LinearLayout
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:orientation="vertical">

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/reward_points"
                                                android:textColor="@color/button_text_color"
                                                android:textStyle="normal" />

                                            <TextView
                                                android:id="@+id/mmkperpoint"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/_1_pt_1_mmk"
                                                android:textSize="12sp" />

                                        </LinearLayout>


                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="0.1"
                                            android:text=":"
                                            android:textColor="@color/button_text_color" />

                                        <TextView
                                            android:id="@+id/rewardpoint"
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:text="2000 MMK"
                                            android:textColor="@color/button_text_color" />

                                    </LinearLayout>


                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center|top"
                                        android:orientation="horizontal"
                                        android:padding="5dp">

                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:text="@string/by_cash"
                                            android:textColor="@color/button_text_color" />

                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="0.1"
                                            android:text=":" />

                                        <TextView
                                            android:id="@+id/cashpaid"
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:text="1200 MMK"
                                            android:textColor="@color/button_text_color" />

                                    </LinearLayout>


                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center|top"
                                        android:orientation="horizontal"
                                        android:padding="5dp">

                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:text="@string/credit_debit_card"
                                            android:textColor="@color/button_text_color" />

                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="0.1"
                                            android:text=":" />

                                        <TextView
                                            android:id="@+id/paidbycreditordebit"
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:text="0"
                                            android:textColor="@color/button_text_color" />

                                    </LinearLayout>


                                    <View
                                        android:layout_width="match_parent"
                                        android:layout_height="5dp"

                                        android:layout_marginTop="5dp"
                                        android:layout_marginBottom="5dp"
                                        android:background="@drawable/horizontal_dash_line" />


                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center|top"
                                        android:orientation="horizontal"
                                        android:padding="5dp">

                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:text="@string/total_amount_received"
                                            android:textColor="@color/button_text_color" />

                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="0.1"
                                            android:text=":" />

                                        <TextView
                                            android:id="@+id/totalamtpaid"
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:text="3200 MMK"
                                            android:textColor="#e56075" />

                                    </LinearLayout>

                                </LinearLayout>

                            </ScrollView>

                        </LinearLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/payment_approve_cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="2"
                        android:background="@drawable/button_grey"
                        android:shadowColor="#b3b3b3"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/cancel"
                        android:textColor="@color/white"

                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5" />

                    <Button
                        android:id="@+id/payment_approve_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@drawable/button"
                        android:shadowColor="#b3b3b3"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/approve"
                        android:textColor="@color/button_text_color"

                        />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</layout>
